--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,4 +1,11 @@
-.HomePage__TopAnime {
+.HomePage__TopAnime,
+.HomePage_Recomendation {
+  background-color: var(--color1);
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.TopAnimeList {
   width: 100%;
   height: 100%;
   display: flex;
@@ -6,7 +13,6 @@
   justify-content: center;
   align-items: stretch;
   margin: 0 auto;
-  background-color: var(--color1);
 }
 
 .TopAnimeCard {
