feat: add Detail Anime page

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ a,
 span,
 div {
   color: var(--color4);
+  list-style: none;
 }
 
 a {
@@ -94,6 +95,15 @@ h1 {
   transition: 0.5s;
 }
 
+.fade-in {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-in.active {
+  opacity: 1;
+}
+
 @media (min-width: 1024px) {
   h1 {
     font-size: 2rem;
@@ -116,7 +126,7 @@ h1 {
   }
 
   h6 {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
   }
 
   p,
